# typed-protocols

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUITING.md  README.md  cabal.project  default.nix  release.nix
.github/ISSUE_TEMPLATE/: bug_report.md  config.yaml
.github/workflows/: cabal.project.local  github-page.yml  haskell.yml
nix/: check-nixfmt.nix  check-stylish.nix  pkgs.nix  typed-protocols.nix  windows-testing-bundle.nix
scripts/: check-stylish-ignore  check-stylish.sh
typed-protocols/: CHANGELOG.md  NOTICE  typed-protocols.cabal
typed-protocols-cborg/: CHANGELOG.md  NOTICE  README.md  typed-protocols-cborg.cabal
typed-protocols-cborg/src/Network/TypedProtocol/Codec/: CBOR.hs
typed-protocols-doc/: .ghci  NOTICE  README.md  protocol.html  typed-protocols-doc.cabal
typed-protocols-doc/demo/: DemoProtocol.hs  Main.hs
typed-protocols-doc/src/Network/TypedProtocol/: Documentation.hs
typed-protocols-doc/src/Network/TypedProtocol/Documentation/: DefaultMain.hs  Example.hs  GraphViz.hs  Html.hs  TH.hs  TestProtocol.hs  TestProtocolTH.hs  Text.hs  Types.hs
typed-protocols-doc/test/: Main.hs
typed-protocols-doc/test/Network/TypedProtocol/Tests/: ControlProtocol.hs  Documentation.hs  TestProtocol.hs  TestProtocolTH.hs
typed-protocols-examples/: NOTICE  typed-protocols-examples.cabal
typed-protocols-examples/src/Network/TypedProtocol/: Channel.hs
typed-protocols-examples/src/Network/TypedProtocol/Driver/: Simple.hs
typed-protocols-examples/src/Network/TypedProtocol/PingPong/: Client.hs  Codec.hs  Examples.hs  Server.hs  Type.hs
typed-protocols-examples/src/Network/TypedProtocol/PingPong/Codec/: CBOR.hs
typed-protocols-examples/src/Network/TypedProtocol/ReqResp/: Client.hs  Codec.hs  Examples.hs  Server.hs  Type.hs
typed-protocols-examples/src/Network/TypedProtocol/ReqResp/Codec/: CBOR.hs
typed-protocols-examples/src/Network/TypedProtocol/ReqResp2/: Client.hs  Type.hs
typed-protocols-examples/src/Network/TypedProtocol/Stateful/PingPong/: Client.hs
typed-protocols-examples/src/Network/TypedProtocol/Stateful/ReqResp/: Client.hs  Codec.hs  Examples.hs  Server.hs  Type.hs
typed-protocols-examples/src/Network/TypedProtocol/Trans/: Wedge.hs
typed-protocols-examples/test/: Main.hs
typed-protocols-examples/test/Network/TypedProtocol/PingPong/: Tests.hs
typed-protocols-examples/test/Network/TypedProtocol/ReqResp/: Tests.hs
typed-protocols-stateful/: CHANGELOG.md  NOTICE  typed-protocols-stateful.cabal
typed-protocols-stateful-cborg/: CHANGELOG.md  NOTICE  README.md  typed-protocols-stateful-cborg.cabal
typed-protocols-stateful-cborg/src/Network/TypedProtocol/Stateful/Codec/: CBOR.hs
typed-protocols-stateful/src/Data/Type/: Queue.hs
typed-protocols-stateful/src/Network/TypedProtocol/Stateful/: Codec.hs  Driver.hs  Peer.hs  Proofs.hs
typed-protocols-stateful/src/Network/TypedProtocol/Stateful/Peer/: Client.hs  Server.hs
typed-protocols/cborg/Network/TypedProtocol/Codec/: CBOR.hs
typed-protocols/examples/Network/TypedProtocol/: Channel.hs
typed-protocols/examples/Network/TypedProtocol/Driver/: Simple.hs
typed-protocols/examples/Network/TypedProtocol/PingPong/: Codec.hs  Examples.hs  Server.hs  Type.hs
typed-protocols/examples/Network/TypedProtocol/PingPong/Codec/: CBOR.hs
typed-protocols/examples/Network/TypedProtocol/ReqResp/: Client.hs  Codec.hs  Examples.hs  Server.hs  Type.hs
typed-protocols/examples/Network/TypedProtocol/ReqResp/Codec/: CBOR.hs
typed-protocols/examples/Network/TypedProtocol/ReqResp2/: Client.hs  Type.hs
typed-protocols/examples/Network/TypedProtocol/ReqResp3/: Client.hs  Examples.hs  Server.hs  Type.hs
typed-protocols/examples/Network/TypedProtocol/Stateful/ReqResp/: Client.hs  Codec.hs  Examples.hs  Server.hs  Type.hs
typed-protocols/examples/Network/TypedProtocol/Trans/: Wedge.hs
typed-protocols/properties/Network/TypedProtocol/Codec/: Properties.hs
typed-protocols/properties/Network/TypedProtocol/Stateful/Codec/: Properties.hs
typed-protocols/properties/Test/QuickCheck/Monoids/: Compat.hs
typed-protocols/reqresp/Data/Type/: NatMap.hs
typed-protocols/reqresp/Data/Type/NatMap/: Impl.hs  Types.hs
typed-protocols/reqresp/Network/TypedProtocol/: ReqResp.hs
typed-protocols/reqresp/Network/TypedProtocol/ReqResp/: Core.hs  Peer.hs  PeerRole.hs  Proofs.hs
typed-protocols/src/Data/Type/: Queue.hs
typed-protocols/src/Network/: TypedProtocol.hs
typed-protocols/src/Network/TypedProtocol/: Codec.hs  Composition.hs  Core.hs  Driver.hs  Lemmas.hs  Peer.hs  Pipelined.hs  Proofs.hs
typed-protocols/src/Network/TypedProtocol/Peer/: Client.hs  Server.hs
typed-protocols/stateful-cborg/Network/TypedProtocol/Stateful/Codec/: CBOR.hs
typed-protocols/stateful/Network/: TypedProtocol.hs
typed-protocols/stateful/Network/TypedProtocol/Stateful/: Codec.hs  Driver.hs  Peer.hs  Proofs.hs
typed-protocols/stateful/Network/TypedProtocol/Stateful/Peer/: Client.hs  Server.hs
typed-protocols/test/: Main.hs
typed-protocols/test/Network/TypedProtocol/PingPong/: Tests.hs
typed-protocols/test/Network/TypedProtocol/ReqResp/: Tests.hs
typed-protocols/test/Network/TypedProtocol/ReqResp3/: Tests.hs
