cabal-version:       3.4
name:                typed-protocols-stateful-cborg
version:             0.4.0.0
synopsis:            CBOR codecs for typed-protocols
-- description:
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
copyright:           2022-2025 Input Output Global Inc (IOG)
author:              Marcin Szamotulski
maintainer:          marcin.szamotulski@iohk.io
category:            Control
tested-with:         GHC == {8.10, 9.2, 9.4, 9.6, 9.8, 9.10}
build-type:          Simple

-- These should probably be added at some point.
extra-doc-files:     CHANGELOG.md, README.md

library
  exposed-modules:   Network.TypedProtocol.Stateful.Codec.CBOR

  build-depends:     base            >=4.12  && <4.21,
                     bytestring      >=0.10  && <0.13,
                     cborg           >=0.2.1 && <0.3,
                     singletons,       

                     io-classes,
                     typed-protocols ^>= 0.4,
                     typed-protocols-cborg,
                     typed-protocols-stateful

  hs-source-dirs:    src
  default-language:  Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:       -Wall
                     -Wno-unticked-promoted-constructors
                     -Wcompat
                     -Wincomplete-uni-patterns
                     -Wincomplete-record-updates
                     -Wpartial-fields
                     -Widentities
                     -Wredundant-constraints
