cabal-version:       3.4
name:                typed-protocols
version:             1.0.0.0
synopsis:            A framework for strongly typed protocols
description:         A robust session type framework which supports protocol pipelining.
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
copyright:           2019-2025 Input Output Global Inc (IOG)
author:              Alexander Vieth, Duncan Coutts, Marcin Szamotulski
maintainer:          alex@well-typed.com, duncan@well-typed.com, marcin.szamotulski@iohk.io
category:            Control
build-type:          Simple
tested-with:         GHC == {9.6, 9.8, 9.10, 9.12}
extra-doc-files:     CHANGELOG.md
                     README.md

library
  exposed-modules:   Network.TypedProtocol
                   , Network.TypedProtocol.Core
                   , Network.TypedProtocol.Peer
                   , Network.TypedProtocol.Peer.Client
                   , Network.TypedProtocol.Peer.Server
                   , Network.TypedProtocol.Codec
                   , Network.TypedProtocol.Driver
                   , Network.TypedProtocol.Proofs
  other-modules:     Network.TypedProtocol.Lemmas

  other-extensions:  GADTs
                   , RankNTypes
                   , PolyKinds
                   , DataKinds
                   , ScopedTypeVariables
                   , TypeFamilies
                   , TypeOperators
                   , BangPatterns
  build-depends:     base >=4.12 && <4.22,
                     io-classes:io-classes ^>= 1.7,
                     singletons ^>= 3.0

  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wno-unticked-promoted-constructors
                     -Wcompat
                     -Wincomplete-uni-patterns
                     -Wincomplete-record-updates
                     -Wpartial-fields
                     -Widentities
                     -Wredundant-constraints

library typed-protocols-cborg
  visibility:        public
  exposed-modules:   Network.TypedProtocol.Codec.CBOR

  build-depends:     base,
                     bytestring      >=0.10  && <0.13,
                     cborg           >=0.2.1 && <0.3,
                     singletons,       
                     primitive,

                     io-classes:io-classes ^>= 1.7,
                     typed-protocols:typed-protocols

  hs-source-dirs:    cborg
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wno-unticked-promoted-constructors
                     -Wcompat
                     -Wincomplete-uni-patterns
                     -Wincomplete-record-updates
                     -Wpartial-fields
                     -Widentities
                     -Wredundant-constraints

library typed-protocols-stateful
  visibility:         public
  exposed-modules:    Network.TypedProtocol.Stateful.Peer
                    , Network.TypedProtocol.Stateful.Peer.Client
                    , Network.TypedProtocol.Stateful.Peer.Server
                    , Network.TypedProtocol.Stateful.Driver
                    , Network.TypedProtocol.Stateful.Proofs
                    , Network.TypedProtocol.Stateful.Codec

  other-extensions:   GADTs
                    , RankNTypes
                    , PolyKinds
                    , DataKinds
                    , ScopedTypeVariables
                    , TypeFamilies
                    , TypeOperators
                    , BangPatterns
  default-extensions: ImportQualifiedPost
  build-depends:      base,
                      singletons,
                      io-classes:io-classes,
                      typed-protocols:typed-protocols

  hs-source-dirs:     stateful
  default-language:   Haskell2010
  ghc-options:        -Wall
                      -Wno-unticked-promoted-constructors
                      -Wcompat
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wpartial-fields
                      -Widentities
                      -Wredundant-constraints

library typed-protocols-stateful-cborg
  visibility:        public
  exposed-modules:   Network.TypedProtocol.Stateful.Codec.CBOR

  build-depends:     base,
                     bytestring,
                     cborg,
                     singletons,       

                     io-classes:io-classes,
                     typed-protocols:{typed-protocols,typed-protocols-cborg,typed-protocols-stateful}

  hs-source-dirs:    stateful-cborg
  default-language:  Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:       -Wall
                     -Wno-unticked-promoted-constructors
                     -Wcompat
                     -Wincomplete-uni-patterns
                     -Wincomplete-record-updates
                     -Wpartial-fields
                     -Widentities
                     -Wredundant-constraints

library typed-protocols-examples
  visibility:        public
  exposed-modules:   Network.TypedProtocol.Channel
                   , Network.TypedProtocol.Driver.Simple

                   , Network.TypedProtocol.PingPong.Type
                   , Network.TypedProtocol.PingPong.Client
                   , Network.TypedProtocol.PingPong.Server
                   , Network.TypedProtocol.PingPong.Codec
                   , Network.TypedProtocol.PingPong.Codec.CBOR
                   , Network.TypedProtocol.PingPong.Examples

                   , Network.TypedProtocol.ReqResp.Type
                   , Network.TypedProtocol.ReqResp.Client
                   , Network.TypedProtocol.ReqResp.Server
                   , Network.TypedProtocol.ReqResp.Codec
                   , Network.TypedProtocol.ReqResp.Codec.CBOR
                   , Network.TypedProtocol.ReqResp.Examples

                   , Network.TypedProtocol.ReqResp2.Type
                   , Network.TypedProtocol.ReqResp2.Client

                   , Network.TypedProtocol.Stateful.ReqResp.Type
                   , Network.TypedProtocol.Stateful.ReqResp.Client
                   , Network.TypedProtocol.Stateful.ReqResp.Server
                   , Network.TypedProtocol.Stateful.ReqResp.Codec
                   , Network.TypedProtocol.Stateful.ReqResp.Examples

                   , Network.TypedProtocol.Trans.Wedge
  other-extensions:  GADTs
                   , RankNTypes
                   , PolyKinds
                   , DataKinds
                   , ScopedTypeVariables
                   , TypeFamilies
                   , TypeOperators
                   , BangPatterns
  build-depends:     base,
                     bytestring,
                     cborg,
                     serialise,
                     singletons,
                     contra-tracer,
                     io-classes:{io-classes,si-timers},
                     network,
                     time,
                     typed-protocols:{typed-protocols,typed-protocols-cborg,typed-protocols-stateful}

  hs-source-dirs:    examples
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wno-unticked-promoted-constructors
                     -Wcompat
                     -Wincomplete-uni-patterns
                     -Wincomplete-record-updates
                     -Wpartial-fields
                     -Widentities
                     -Wredundant-constraints

test-suite typed-protocols-test
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  hs-source-dirs:    test
  other-modules:     Network.TypedProtocol.PingPong.Tests
                   , Network.TypedProtocol.ReqResp.Tests
  build-depends:     base
                   , bytestring
                   , contra-tracer
                   , typed-protocols:{typed-protocols,typed-protocols-cborg,typed-protocols-examples}
                   , io-classes:{io-classes,si-timers}
                   , io-sim
                   , QuickCheck
                   , tasty
                   , tasty-quickcheck

  if !os(windows)
      build-depends: directory
                   , network
                   , unix

  default-language:  Haskell2010
  ghc-options:       -rtsopts
                     -Wall
                     -Wno-unticked-promoted-constructors
                     -Wno-orphans
